# monk

./: .gitignore  .release-please-manifest.json  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  deploy-dev.yml  release-please.yml  release.yml
app/: main.py  schemas.py  sessions.py  settings.py
app/routers/: __init__.py  (+2 more)
docs/: doppler-architecture.md  workflows.md
pocket/: .gitignore  docker-compose.yml
scripts/: notes-git  pb_setup_channel_configs.py
services/api/: .dockerignore  BEST_PRACTICES.md  CHANGELOG.md  CLAUDE.md  Dockerfile  doppler.yaml  pyproject.toml
services/api/app/: context.py  interface.py  logging_config.py  main.py  middleware.py  schemas.py  sessions.py  settings.py  telemetry.py
services/api/app/handlers/: __init__.py  base.py  fake.py  resolver.py
services/api/app/handlers/chatwoot/: __init__.py  handler.py  schema_provider.py  schemas.py  template_provider.py
services/api/app/handlers/fake/: __init__.py  handler.py
services/api/app/routers/: __init__.py  campaign.py  campaing.py  channels.py  client.py  leads.py  lists.py  messenger.py
services/api/docs/: messenger-handlers.md  observability.md  requests.http
services/api/tests/: conftest.py  test_campaigns.py  test_channels.py  test_chatwoot_handler.py  test_chatwoot_integration.py  test_client.py  test_e2e.py  test_interface.py  test_lists.py  test_messenger.py  test_schema_contracts.py  test_schemas.py  test_subscribers.py  test_telemetry.py  test_variable_resolver.py
tests/: conftest.py  test_lists.py
(+7 files in other folders)
